# ADS

./: .coverage  .coverage.claude.pid96.XnGrZEqx.Hhzm1gARCQhh  .env.example  .gitattributes  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  BASLA.md  CHANGELOG.md  GITHUB-KURULUM.md  LICENSE  Makefile  PUSH-SORUN.md  README.md  README_TR.md  push.bat  push.sh  pyproject.toml  requirements.txt
.codex/: config.toml
aeo/: 7-30-gun-plan.md  README.md  alinti-testi.csv  hreflang-nextjs.md  icerik-mimarisi.md  llms.txt  olcum.md  robots.txt  soru-kumeleri.md
apify/: README.md  actor-recipes.md  monitoring-plan.md
assets/: check_lengths.py  google-rsa-tr.yaml  meta-creative-concepts-tr.md
attribution/: README.md  model.md
audit/: MCKINSEY-EXECUTIVE-SUMMARY.html
b2b/: README.md  deger-onerisi.md  hedef-firmalar.md  hesap-listesi.csv  mice-paketleri.md  outreach-sablonlari.md  prospecting-receteleri.md  rate-card.md  sell-sheet.html
campaigns/: butce-matris.csv
competitors/: README.md  araclar.md  izleme-sablonu.csv  rakipler.md
config/: ads-assets.yaml
content/: 01-kozbeyli-koyu-rehberi.md  02-foca-gezi-rehberi.md  03-koy-kahvaltisi-ege-mutfagi.md  README.md  hazir-icerik-paketi.md
conversions/: README.md  enhanced-conversions.md  gclid-capture.html  google-offline-import.md  meta-offline-capi.md  offline-import-template.csv
creatives/: 01-reels-shotlist-9x16.md  02-feed-shotlist-4x5.md  03-altyazi-script.md  README.md  storyboard.html
dashboard/: kontrol-merkezi.html  rapor.html
docs/: 00-architecture-and-verdicts.md  01-hms-otel-tracking.md  02-gtm-resolution.md  03-90-day-checklist.md  04-security-and-ban-risk.md  05-optimizasyon-playbook.md  06-turkiye-otel-reklam-benchmarklari.md  07-repo-arastirmasi-ve-kads-mimarisi.md  08-yerel-seo-google-isletme.md  09-dijital-varlik-denetimi.md  10-referans-kutuphanesi.md  11-arac-zinciri-skills-video.md  12-web-guvenlik-ve-shannon.md  13-kurulum-runbook.md  14-aylik-operasyon-rutini.md  15-sezon-kampanya-plani.md  16-conversion-funnel.md  17-saglamlik-ve-self-check.md  18-butce-dagitim-matrisi.md  19-sezon-strateji-detay.md  20-guncel-platform-arastirmasi.md  21-gercek-veri-kampanya-analizi.md  22-butce-dostu-reklam-aeo-geo-playbook.md  23-meta-pixel-denetimi.md  24-gtm-etiket-kurulumu.md  25-search-console-bing-kurulum.md  26-site-onpage-seo-denetimi.md  REKLAM-TESLIM-PAKETI.md  aeo-strategy.md
e2e/: README.md  conftest.py  test_dashboards_e2e.py
email/: README.md  sablonlar.md  sira-akisi.md
finance/: .~lock.kozbeyli-butce-ongoru.xlsx#  README.md  kozbeyli-butce-ongoru.xlsx
fixes/: 04-nap-standart.md  05-hms-destek-talebi.md  06-yorum-toplama-sablonlari.md  07-hreflang.md  README.md
golive/: GTM-KURULUM.html  HEMEN-YAP.html  MAPS-VE-AI-30GUN.html  YAYINA-ALMA.md
kads/: __init__.py  __main__.py  calendar.py  cli.py  core.py  data.py  data_ext.py  data_growth.py  presence.py  publish.py  report.py  rules.py  seo.py
landing/: README.md  ab-test-yapilari.md  test-plani.md
memory/: learnings.md
outreach/: README.md  influencer-stratejisi.md  mesaj-sablonlari.md  takip-sablonu.csv
plans/: 30000-tl-cross-channel-plan.md
profiles/: ESITLEME-KONTROL.md  README.md  google-isletme-profili.md  ota-profil-metinleri.md  sosyal-bio.md
publishing/: README.md  postiz-kurulum.md
reputation/: README.md  kriz-iletisimi.md  (+1 more)
(+166 files in other folders)
