[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kads"
dynamic = ["version"]
description = "Kozbeyli Konağı reklam operasyonları CLI — Google + Meta + Yerel SEO, kod seviyesinde guardrail."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Kozbeyli Konağı / Yunuscan"}]
keywords = ["google-ads", "meta-ads", "local-seo", "hotel", "marketing", "cli", "guardrails"]
dependencies = []                       # Sifir zorunlu bagimlilik (bilerek)

[project.optional-dependencies]
dev = ["pytest>=7"]
e2e = ["pytest-playwright>=0.5"]

[project.scripts]
kads = "kads.cli:main"

[tool.setuptools]
packages = ["kads", "kads.platforms"]

[tool.setuptools.dynamic]
version = {attr = "kads.__version__"}

[tool.setuptools.package-data]
kads = ["data.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
