[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kads"
dynamic = ["version"]
description = "Kozbeyli Konağı reklam operasyonları CLI — Google + Meta + Yerel SEO, kod seviyesinde guardrail."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Kozbeyli Konağı / Yunuscan"}]
keywords = ["google-ads", "meta-ads", "local-seo", "hotel", "marketing", "cli", "guardrails"]
dependencies = []                       # Sifir zorunlu bagimlilik (bilerek)

[project.optional-dependencies]
dev = ["pytest>=7"]
e2e = ["pytest-playwright>=0.5"]

[project.scripts]
kads = "kads.cli:main"

[tool.setuptools]
packages = ["kads", "kads.platforms"]

[tool.setuptools.dynamic]
version = {attr = "kads.__version__"}

[tool.setuptools.package-data]
kads = ["data.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["kads"]
# OneDrive dosya kilidini önlemek için kapsam verisi ayrı yola yazılabilir:
#   COVERAGE_FILE=/tmp/.cov python -m pytest --cov=kads
branch = false

[tool.coverage.report]
# Mantık olmayan / canlı-kimlik gerektiren satırları dürüstçe hariç tut.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "except ImportError",
]
# Gerçek platform SDK'sı (canlı kimlik) gerektiren ingestion yolları birim-testle
# kapsanamaz; mock fallback'i test edilir. Dürüstlük için raporda işaretli bırakılır.
